--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,11 @@ input[type="submit"]:hover {
     font-size: 12px;
 }
 
+.sucess {
+    color: #0f0 !important;
+    font-size: 12px;
+}
+
 .register {
     font-size: 12px !important;
 }
@@ -164,15 +169,16 @@ opacity: 0;
   }
 
   .simulador {
+    display: none;
     background-color: #0d0d0d;
     color: #0f0;
     border: 1px solid #0f0; 
     width: auto;
     height: auto; 
-    font-size: 30px; 
+    font-size: 18px !important; 
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     position: absolute;
-    top: 250px;
+    top: 15px;
     border-radius: 0%;  
   }
